# chem-diagrams

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish-test.yml  publish.yml
about/: index.html
api/: index.html
api/SUMMARY/: index.html
api/constants/: index.html
api/energy_diagram/: index.html
api/managers/: index.html
api/managers/bar_manager/: index.html
api/managers/difference_manager/: index.html
api/managers/figure_manager/: index.html
api/managers/image_manager/: index.html
api/managers/layout_manager/: index.html
api/managers/number_manager/: index.html
api/managers/path_manager/: index.html
api/managers/style_manager/: index.html
api/templates/: index.html
api/templates/base_template/: index.html
api/templates/example_template/: index.html
api/templates/tonner_zech_template/: index.html
api/validation/: index.html
api/validation/validators/: index.html
chemdiagrams/: __init__.py  constants.py  energy_diagram.py  example_use.ipynb
chemdiagrams/managers/: __init__.py  bar_manager.py  figure_manager.py  image_manager.py  layout_manager.py  number_manager.py  path_manager.py  style_manager.py
chemdiagrams/validation/: __init__.py  validators.py
docs/: about.md  examples.md  index.md  methods.md  quickstart.md  templates.md  usage.md
examples/: example_use.ipynb  index.html  readme_images.ipynb  test_use.ipynb
methods/: index.html
quickstart/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/chemdiagrams/: __init__.py  constants.py  energy_diagram.py
src/chemdiagrams/managers/: __init__.py  bar_manager.py  difference_manager.py  figure_manager.py  image_manager.py  layout_manager.py  number_manager.py  path_manager.py  style_manager.py
src/chemdiagrams/templates/: base_template.py  example_template.py  tonner_zech_template.py
src/chemdiagrams/validation/: __init__.py  validators.py
templates/: index.html
tests/: conftest.py  test_chemdiagrams.py
usage/: index.html
workflows/: ci.yml
