[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemdiagrams"
version = "0.1.2"
description = "Publication-quality reaction energy diagrams for computational chemistry"
keywords = ["chemistry", "energy diagram", "reaction profile", "potential energy surface", "matplotlib", "computational chemistry", "theoretical chemistry", "visualization"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tim Bastian Enders", email = "chemistry.tim.enders@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.23",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Repository = "https://github.com/Tonner-Zech-Group/chem-diagrams"
"Bug Tracker" = "https://github.com/Tonner-Zech-Group/chem-diagrams/issues"
"Homepage" = "https://github.com/Tonner-Zech-Group"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chemdiagrams*"]

[tool.setuptools.package-data]
chemdiagrams = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
exclude = ["examples"]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]